--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
-            href="/resources/img/favicon.ico"
+            href="resources/img/favicon.ico"
             rel="shortcut icon"
             type="image/x-icon"
         />
