--- a/webapp/index.html
+++ b/webapp/index.html
@@ -21,6 +21,7 @@
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
+            data-sap-ui-async="true"
         ></script>
 
         <script>
