--- a/webapp/index.html
+++ b/webapp/index.html
@@ -22,6 +22,7 @@
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
             data-sap-ui-async="true"
+            data-sap-ui-xx-supportedLanguages="en"
         ></script>
 
         <script>
