--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,6 +12,7 @@
         <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
 
         <script
+            async
             id="sap-ui-bootstrap"
             src="resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
