--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="resources/img/favicon.ico"
-            rel="shortcut icon"
-            type="image/x-icon"
-        />
 
-        <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+          href="resources/img/favicon.ico"
+          rel="shortcut icon"
+          type="image/x-icon" />
 
-        <script
+    <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
+
+    <script
             id="sap-ui-bootstrap"
             src="resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
@@ -22,8 +22,7 @@
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
             data-sap-ui-async="true"
-            data-sap-ui-xx-supportedLanguages="en"
-        ></script>
+            data-sap-ui-xx-supportedLanguages="en"></script>
 
     <style>
         html {
@@ -37,8 +36,10 @@
             background-repeat: no-repeat;
         }
     </style>
+</head>
 
-    <body class="sapUiBody" role="application">
-        <div id="content"></div>
-    </body>
+<body class="sapUiBody" role="application">
+    <div data-sap-ui-component data-name="com.devtoberfest.devtoberfest2021FrontendCodingChallenge"></div>
+</body>
+
 </html>
