--- a/webapp/index-dev.html
+++ b/webapp/index-dev.html
@@ -13,12 +13,11 @@
 
     <script
             id="sap-ui-bootstrap"
-            src="resources/custom-boot.js"
+            src="resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
       }'
-            data-sap-ui-modules="com.devtoberfest.devtoberfest2021FrontendCodingChallenge.Component-bundle"
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
