--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,8 @@
 
         <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
 
+        <link id="animation" rel="stylesheet" type="text/css" href="css/style.css"/>
+
         <script
             id="sap-ui-bootstrap"
             src="resources/sap-ui-core.js"
@@ -21,7 +23,7 @@
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
-			data-sap-ui-async="true"
+            data-sap-ui-async="true"
         ></script>
 
         <script>
@@ -41,6 +43,31 @@
     </head>
 
     <body class="sapUiBody" role="application">
-        <div id="content"></div>
+        <div id="content">
+            <!-- Loading splash screen -->
+            <div
+                id="busyIndicator"
+                style="text-align: center; font-family: Sans, Arial"
+            >
+                <!-- static header text -->
+                <h3>My UI5 App is loading</h3>
+                
+                <!-- 
+                    loader animation 
+                    CC0 licensed code used with permission from 
+                    https://loading.io/css/
+                -->
+                <div class="lds-ellipsis">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <!-- end of loader animation -->
+
+                <!-- static footer text  -->
+                <center><h5>This may take a few moments...</h5></center>
+            </div>
+        </div>
     </body>
 </html>
