--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
 
         <script
             id="sap-ui-bootstrap"
-            src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+            src="https://sapui5.hana.ondemand.com/1.96.0/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
@@ -24,7 +24,7 @@
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
             data-sap-ui-async="true"
-            data-sap-ui-preload="async"
+            data-sap-ui-frameOptions="trusted"
         ></script>
 
         <script>
