--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,7 +24,7 @@
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
             data-sap-ui-async="true"
-            data-sap-ui-frameOptions="trusted"
+            data-sap-ui-xx-supportedLanguages="en;de"
         ></script>
 
         <script>
