--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,9 +9,9 @@
             type="image/x-icon"
         />
 
-        <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
+        <link id="animation" rel="stylesheet" type="text/css" href="css/animator.css" async/>
 
-        <link id="animation" rel="stylesheet" type="text/css" href="css/style.css"/>
+        <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
 
         <script
             id="sap-ui-bootstrap"
@@ -26,20 +26,7 @@
             data-sap-ui-async="true"
         ></script>
 
-        <script>
-            sap.ui.getCore().attachInit(function () {
-                sap.ui.require(
-                    ["sap/ui/core/ComponentContainer"],
-                    function (ComponentContainer) {
-                        new ComponentContainer({
-                            name: "com.devtoberfest.devtoberfest2021FrontendCodingChallenge",
-                            manifest: true,
-                            height: "100%",
-                        }).placeAt("content");
-                    }
-                );
-            });
-        </script>
+        
     </head>
 
     <body class="sapUiBody" role="application">
@@ -68,4 +55,19 @@
             </div>
         </div>
     </body>
+
+    <script>
+        sap.ui.getCore().attachInit(function () {
+            sap.ui.require(
+                ["sap/ui/core/ComponentContainer"],
+                function (ComponentContainer) {
+                    new ComponentContainer({
+                        name: "com.devtoberfest.devtoberfest2021FrontendCodingChallenge",
+                        manifest: true,
+                        height: "100%",
+                    }).placeAt("content");
+                }
+            );
+        });
+    </script>
 </html>
