--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,43 +3,30 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="resources/img/favicon.ico"
-            rel="shortcut icon"
-            type="image/x-icon"
-        />
+        <link rel="icon" href="resources/img/favicon.ico" type="image/x-icon" />
 
         <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
 
         <script
             id="sap-ui-bootstrap"
-            src="resources/sap-ui-core.js"
+            src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
-            data-sap-ui-resourceroots='{
-        "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
-      }'
+            data-sap-ui-resourceroots='{"com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"}'
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
+            data-sap-ui-async="true"
+            data-sap-ui-preload="async"
             data-sap-ui-frameOptions="trusted"
         ></script>
-
-        <script>
-            sap.ui.getCore().attachInit(function () {
-                sap.ui.require(
-                    ["sap/ui/core/ComponentContainer"],
-                    function (ComponentContainer) {
-                        new ComponentContainer({
-                            name: "com.devtoberfest.devtoberfest2021FrontendCodingChallenge",
-                            manifest: true,
-                            height: "100%",
-                        }).placeAt("content");
-                    }
-                );
-            });
-        </script>
     </head>
 
-    <body class="sapUiBody" role="application">
-        <div id="content"></div>
+    <body class="sapUiBody">
+        <div
+            data-sap-ui-component
+            data-name="com.devtoberfest.devtoberfest2021FrontendCodingChallenge"
+            data-id="container"
+            data-settings='{"id" : "com.devtoberfest.devtoberfest2021FrontendCodingChallenge"}'
+            data-handle-validation="true"
+        ></div>
     </body>
 </html>
