--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="resources/img/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 
         <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
 
