--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,6 +17,7 @@
             data-sap-ui-async="true"
             data-sap-ui-preload="async"
             data-sap-ui-frameOptions="trusted"
+            sap-ui-xx-waitForTheme="rendering"
         ></script>
     </head>
 
