--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,7 +13,9 @@
 
         <script
             id="sap-ui-bootstrap"
-            src="resources/sap-ui-core.js"
+            d-src="resources/sap-ui-core.js"
+            src="https://sapui5.hana.ondemand.com/1.96.0/resources/sap-ui-core.js"
+            data-sap-ui-libs="sap.ui.core,sap.m,sap.tnt,sap.ui.layout"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
@@ -21,6 +23,7 @@
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
+            data-sap-ui-async="true"
         ></script>
 
         <script>
