--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,8 +13,9 @@
 
         <script
             id="sap-ui-bootstrap"
-            src="resources/sap-ui-core.js"
+            src="https://sapui5.hana.ondemand.com/1.94.0/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
+            data-sap-ui-async="true"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
       }'
