--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,7 +13,9 @@
 
         <script
             id="sap-ui-bootstrap"
-            src="https://sapui5.hana.ondemand.com/1.95.0/resources/sap-ui-core.js"
+            src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+            data-sap-ui-async="true"
+            data-sap-ui-preload="async"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
@@ -21,7 +23,6 @@
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
-            data-sap-ui-async="true"
         ></script>
 
         <script>
