--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,6 +9,8 @@
             type="image/x-icon"
         />
 
+        <link id="animation" rel="stylesheet" type="text/css" href="css/progress-indicator.css"/>
+
         <title>Devtoberfest 2021 - Frontend Coding Challenge</title>
 
         <script
@@ -25,7 +27,6 @@
             data-sap-ui-frameOptions="trusted"
         ></script>
 
-
         <script>
             sap.ui.getCore().attachInit(function () {
                 sap.ui.require(
@@ -36,6 +37,9 @@
                             manifest: true,
                             height: "100%",
                         }).placeAt("content");
+                        
+                        let stylesheet = document.getElementById("animation");
+                        stylesheet.parentNode.removeChild(stylesheet);
                     }
                 );
             });
@@ -43,6 +47,20 @@
     </head>
 
     <body class="sapUiBody" role="application">
-        <div id="content"></div>
+        <div id="content">
+            <div id="busyIndicator" style="text-align: center; font-family: Sans, Arial">
+                <h3>Loading.../h3>
+                
+                <img src="resources/img/sapui5-logo.png" height="227px" width="551px" class="logo"/>
+                <div class="lds-ellipsis">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                </div>
+
+                <center><h5>Loading...</h5></center>
+            </div>
+        </div>
     </body>
 </html>
