--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,13 +14,14 @@
         <script
             id="sap-ui-bootstrap"
             src="https://sapui5.hana.ondemand.com/1.95.0/resources/sap-ui-core.js"
+            data-sap-ui-async="true"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
       }'
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
-            data-sap-ui-async="true"
+            data-sap-ui-preload="async"            
             data-sap-ui-frameOptions="trusted"
         ></script>
 
