--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,12 +14,15 @@
         <script
             id="sap-ui-bootstrap"
             src="resources/sap-ui-core.js"
+            data-sap-ui-libs="sap.ui.core,sap.m,sap.ui.layout,sap.tnt"
+            data-sap-ui-language="en"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
       }'
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
+            data-sap-ui-async="true"
             data-sap-ui-frameOptions="trusted"
         ></script>
 
