--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
         <script
             id="sap-ui-bootstrap"
             src="https://ui5.sap.com/resources/sap-ui-core.js"
-            data-sap-ui-libs="sap.m"
+            data-sap-ui-libs="sap.ui.core"
             data-sap-ui-async="true"
             data-sap-ui-preload="true"
             data-sap-ui-theme="sap_fiori_3"
@@ -27,23 +27,14 @@
             data-sap-ui-frameOptions="trusted"
         ></script>
 
-        <script>
-            sap.ui.getCore().attachInit(function () {
-                sap.ui.require(
-                    ["sap/ui/core/ComponentContainer"],
-                    function (ComponentContainer) {
-                        new ComponentContainer({
-                            name: "com.devtoberfest.devtoberfest2021FrontendCodingChallenge",
-                            manifest: true,
-                            height: "100%",
-                        }).placeAt("content");
-                    }
-                );
-            });
-        </script>
     </head>
 
     <body class="sapUiBody" role="application">
-        <div id="content"></div>
+        <div
+            data-sap-ui-component
+            data-name="com.devtoberfest.devtoberfest2021FrontendCodingChallenge"
+            data-id="container"
+            data-settings='{"id" : "devtoberfest"}'
+        ></div>
     </body>
 </html>
