--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,6 +15,8 @@
             id="sap-ui-bootstrap"
             src="resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
+            data-sap-ui-async="true"
+            data-sap-ui-preload="async"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
       }'
