--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,7 +13,8 @@
 
         <script
             id="sap-ui-bootstrap"
-            src="https://sapui5.hana.ondemand.com/1.95.0/resources/sap-ui-core.js"
+            src="https://ui5.sap.com/resources/sap-ui-core.js"
+            data-sap-ui-libs="sap.ui.core"
             data-sap-ui-async="true"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
@@ -21,7 +22,7 @@
       }'
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
-            data-sap-ui-preload="async"            
+            data-sap-ui-preload="true"            
             data-sap-ui-frameOptions="trusted"
         ></script>
 
