data-sap-ui-preload="true"

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,6 +16,7 @@
             src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-async="true"
+            data-sap-ui-preload="true"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
       }'
