--- a/webapp/index.html
+++ b/webapp/index.html
@@ -21,7 +21,9 @@
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-frameOptions="trusted"
-        ></script>
+            data-sap-ui-async="true"
+            data-sap-ui-preload="async"            
+            ></script>
 
         <script>
             sap.ui.getCore().attachInit(function () {
