--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,6 +17,7 @@
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-async="true"
             data-sap-ui-preload="async"
+            data-sap-ui-libs="sap.ui.core"
             data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
       }'
@@ -31,7 +32,7 @@
             data-sap-ui-component
             data-name="com.devtoberfest.devtoberfest2021FrontendCodingChallenge"
             data-id="container"
-            data-settings='{"id" : "lbn"}'
+            data-settings='{"id" : "devtoberfest"}'
         ></div>
     </body>
 </html>
