--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,7 +12,7 @@
 
     <script 
 		id="sap-ui-bootstrap" 
-		src="https://sapui5.hana.ondemand.com/resources/sap-ui-cachebuster/sap-ui-core.js"
+		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_fiori_3" 
 		data-sap-ui-resourceroots='{
         "com.devtoberfest.devtoberfest2021FrontendCodingChallenge": "./"
@@ -20,9 +20,7 @@
 	  	data-sap-ui-oninit="module:sap/ui/core/ComponentSupport" 
 		data-sap-ui-compatVersion="edge"
         data-sap-ui-async="true" 
-		data-sap-ui-preload="async" 
 		data-sap-ui-frameOptions="trusted"
-        data-sap-ui-appCacheBuster="./"
 		></script>
 
     <script>
